# cg-vault

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ArcballHandler.cpp  ArcballHandler.hpp  Camera.cpp  Camera.hpp  Geometry.cpp  Geometry.hpp  Main.cpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SimpleGui.cpp  SimpleGui.hpp  Teapot.cpp  Teapot.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  VertexArray.cpp  VertexArray.hpp  main.cpp
src/shader/: Debug.frag  Debug.vert  Flat.vert  GouraudSingleColor.vert  LightSource.vert  Phong.frag  Phong.vert  Shadow.frag  Shadow.vert  VertexColor.frag  VertexColorFromNormal.vert  fragment.glsl  vertex.glsl
src/vault-lib/: ArcballHandler.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Geometry.hpp  Main.cpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  SceneNode.cpp  SceneNode.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SimpleGui.cpp  SimpleGui.hpp  Teapot.cpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp
src/vault-lib/shader/: ClippingPlane.vert  ClippingPlaneSingleColor.vert  Flat.vert  FlatVertexColor.frag  GouraudSingleColor.vert  Phong.vert  VertexColor.frag  VertexColorFromNormal.vert
